--- a/force-app/main/default/classes/TriggerHandler.cls
+++ b/force-app/main/default/classes/TriggerHandler.cls
@@ -1,5 +1,7 @@
-// The common trigger handler that is called by every Apex trigger;
-// Simply delegates the work to their before and after operations.
+/**
+ * The common trigger handler that is called by every Apex trigger.
+ * Simply delegates the work to config's before and after operations.
+ */
 public inherited sharing class TriggerHandler {
     public static void handle(TriggerConfig config) {
         if (!config.isEnabled) return;
